fix: align nav width

--- a/components/nav.css
+++ b/components/nav.css
@@ -34,7 +34,7 @@ nav.admin {
 }
 
 nav>div {
-    max-width: 69rem;
+    max-width: 81rem;
     width: 100%;
     margin: 0 auto;
     align-items: center;
